added plays to test dev/prd only variables

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -130,7 +130,7 @@ inventory      = inventory
 # If set, configures the path to the Vault password file as an alternative to
 # specifying --vault-password-file on the command line.
 #vault_password_file = /path/to/vault_password_file
-vault_password_file = password_prd
+#vault_password_file = password_prd
 vault_password_file = password_dev
 
 # format of string {{ ansible_managed }} available within Jinja2
